Improved example
